# gpencl-rethinked

./: AGENTS.md  CMakeLists.txt  README.md  libgpencl.cpp  libgpencl.h  main.cpp
shaders/: chacha20.comp  poly1305.comp  xor.comp
tests/: test_gpencl.cpp
